--- a/produtos.html
+++ b/produtos.html
@@ -47,7 +47,7 @@
     </article>
     <article>
       <h4>Papel Higiênico 4 unidades</h4>
-      <img src="imagens/papel-higienico.png" alt="Pacote com quatro rolos de papel higiênico" width="220">
+      <img src="imagens/papel-higienico.png" alt="Pacote com um rolo de papel higiênico" width="220">
       <p>Descrição: Folhas duplas e macias, pacote econômico.</p>
       <p>Valor: R$ 5,95</p>
     </article>
