--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <hr>
 <footer>
   <p>&copy; 2025 Mercadinho Raiz &amp; Sabor</p>
+  <p>Desenvolvido por Felipe Proença - 2025</p>
   <p>Contato do estabelecimento: (19) 99999-0000 • contato@raizesabor.com</p>
   <nav>
     <a href="index.html">Início</a> | 
