--- a/produtos.html
+++ b/produtos.html
@@ -73,6 +73,7 @@
 <footer>
   <p>&copy; 2025 Mercadinho Raiz &amp; Sabor</p>
   <p>Contato do estabelecimento: (19) 99999-0000 • contato@raizesabor.com</p>
+  <p>Desenvolvido por Felipe Proença</p>
   <nav>
     <a href="index.html">Início</a> | 
     <a href="produtos.html">Produtos</a> | 
