--- a/produtos.html
+++ b/produtos.html
@@ -2,85 +2,137 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Mercadinho Raiz & Sabor — Produtos</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Mercadinho Raiz & Sabor</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Custom CSS -->
+  <link href="style.css" rel="stylesheet">
+
 </head>
 <body>
-<header>
-  <h1>Mercadinho Raiz & Sabor</h1>
-  <p>O seu minimercado de bairro: fresquinho, prático e com preço justo.</p>
-  <nav>
-    <a href="index.html">Início</a> | 
-    <a href="produtos.html">Produtos</a> | 
-    <a href="servicos.html">Serviços</a> | 
-    <a href="contato.html">Contato</a> | 
+  <a class="visually-hidden-focusable" href="#conteudo">Ir para o conteúdo principal</a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Navegação principal">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Raiz &amp; Sabor</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbars" aria-controls="navbars" aria-expanded="false" aria-label="Alternar navegação">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbars">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
+          <li class="nav-item"><a class="nav-link" href="produtos.html">Produtos</a></li>
+          <li class="nav-item"><a class="nav-link" href="servicos.html">Serviços</a></li>
+          <li class="nav-item"><a class="nav-link" href="cadastro.html">Cadastro &amp; Agendamento</a></li>
+          <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
+        </ul>
+        <span class="navbar-text" id="relogio" aria-live="polite">--:--:--</span>
+      </div>
+    </div>
   </nav>
-  <hr>
-</header>
 
-<main>
-  <h2>Produtos</h2>
+<main id="conteudo" class="container my-4">
+  <h1 class="mb-4">Produtos</h1>
 
-  <section id="bebidas">
-    <h3>Bebidas</h3>
-    <article>
-      <h4>Suco de Laranja 1L</h4>
-      <img src="imagens/suco-laranja.png" alt="Caixa de suco de laranja 1 litro" width="250">
-      <p>Descrição: Suco 100% de laranja, sem adição de açúcar.</p>
-      <p>Valor: R$ 14,90</p>
-    </article>
-    <article>
-      <h4>Água Mineral 500ml</h4>
-      <img src="imagens/agua-mineral.png" alt="Garrafa de água mineral 500 ml" width="250">
-      <p>Descrição: Água mineral natural, leve e refrescante.</p>
-      <p>Valor: R$ 2,29</p>
-    </article>
+  <section id="bebidas" class="mb-5">
+    <h2 class="h4">Bebidas</h2>
+    <div class="row g-4">
+      <div class="col-md-6">
+        <div class="card h-100">
+          <img src="imagens/suco-laranja.png" class="card-img-top img-fluid" alt="Caixa de suco de laranja 1 litro">
+          <div class="card-body">
+            <h3 class="card-title h5">Suco de Laranja 1L</h3>
+            <p class="card-text">Suco 100% de laranja, sem adição de açúcar.</p>
+            <p class="fw-bold">R$ 14,90</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="card h-100">
+          <img src="imagens/agua-mineral.png" class="card-img-top img-fluid" alt="Garrafa de água mineral 500 ml">
+          <div class="card-body">
+            <h3 class="card-title h5">Água Mineral 500ml</h3>
+            <p class="card-text">Água mineral natural, leve e refrescante.</p>
+            <p class="fw-bold">R$ 2,29</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
-  <section id="higiene">
-    <h3>Higiene</h3>
-    <article>
-      <h4>Sabonete Neutro</h4>
-      <img src="imagens/sabonete.png" alt="Sabonete neutro em barra" width="250">
-      <p>Descrição: Sabonete em barra, hipoalergênico para todos os tipos de pele.</p>
-      <p>Valor: R$ 3,30</p>
-    </article>
-    <article>
-      <h4>Papel Higiênico 4 unidades</h4>
-      <img src="imagens/papel-higienico.png" alt="Pacote com um rolo de papel higiênico" width="220">
-      <p>Descrição: Folhas duplas e macias, pacote econômico.</p>
-      <p>Valor: R$ 5,95</p>
-    </article>
+  <section id="higiene" class="mb-5">
+    <h2 class="h4">Higiene</h2>
+    <div class="row g-4">
+      <div class="col-md-6">
+        <div class="card h-100">
+          <img src="imagens/sabonete.png" class="card-img-top img-fluid" alt="Sabonete neutro em barra">
+          <div class="card-body">
+            <h3 class="card-title h5">Sabonete Neutro</h3>
+            <p class="card-text">Sabonete hipoalergênico para todos os tipos de pele.</p>
+            <p class="fw-bold">R$ 3,30</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="card h-100">
+          <img src="imagens/papel-higienico.png" class="card-img-top img-fluid" alt="Pacote com quatro rolos de papel higiênico">
+          <div class="card-body">
+            <h3 class="card-title h5">Papel Higiênico 4 unidades</h3>
+            <p class="card-text">Folhas duplas e macias, pacote econômico.</p>
+            <p class="fw-bold">R$ 5,95</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
-  <section id="mercearia">
-    <h3>Mercearia</h3>
-    <article>
-      <h4>Arroz 1kg</h4>
-      <img src="imagens/arroz.png" alt="Pacote de arroz 1 kg" width="250">
-      <p>Descrição: Arroz branco, grãos selecionados.</p>
-      <p>Valor: R$ 5,00</p>
-    </article>
-    <article>
-      <h4>Feijão 1kg</h4>
-      <img src="imagens/feijao.png" alt="Pacote de feijão 1 kg" width="250">
-      <p>Descrição: Feijão carioca, saboroso e selecionado.</p>
-      <p>Valor: R$ 5,55</p>
-    </article>
+  <section id="mercearia" class="mb-5">
+    <h2 class="h4">Mercearia</h2>
+    <div class="row g-4">
+      <div class="col-md-6">
+        <div class="card h-100">
+          <img src="imagens/arroz.png" class="card-img-top img-fluid" alt="Pacote de arroz 1 kg">
+          <div class="card-body">
+            <h3 class="card-title h5">Arroz 1kg</h3>
+            <p class="card-text">Arroz branco, grãos selecionados.</p>
+            <p class="fw-bold">R$ 5,00</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="card h-100">
+          <img src="imagens/feijao.png" class="card-img-top img-fluid" alt="Pacote de feijão 1 kg">
+          <div class="card-body">
+            <h3 class="card-title h5">Feijão 1kg</h3>
+            <p class="card-text">Feijão carioca, saboroso e selecionado.</p>
+            <p class="fw-bold">R$ 5,55</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 </main>
-<hr>
-<footer>
-  <p>&copy; 2025 Mercadinho Raiz &amp; Sabor</p>
-  <p>Contato do estabelecimento: (19) 99999-0000 • contato@raizesabor.com</p>
-  <p>Desenvolvido por Felipe Proença</p>
-  <nav>
-    <a href="index.html">Início</a> | 
-    <a href="produtos.html">Produtos</a> | 
-    <a href="servicos.html">Serviços</a> | 
-    <a href="contato.html">Contato</a> | 
-  </nav>
-</footer>
+  <footer class="bg-light border-top mt-5 py-4">
+    <div class="container small">
+      <div class="row">
+        <div class="col-md-6">
+          <p class="mb-1">&copy; 2025 Mercadinho Raiz &amp; Sabor — Desenvolvido por Felipe Proença.</p>
+          <p class="mb-0">Contato: (19) 99999-0000 • contato@raizesabor.com</p>
+        </div>
+        <div class="col-md-6 text-md-end">
+          <a href="index.html" class="me-3">Início</a>
+          <a href="produtos.html" class="me-3">Produtos</a>
+          <a href="servicos.html" class="me-3">Serviços</a>
+          <a href="cadastro.html" class="me-3">Cadastro</a>
+          <a href="contato.html">Contato</a>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- Bootstrap JS Bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Custom JS -->
+  <script src="script.js"></script>
 
 </body>
 </html>
